# flush

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
examples/: factorial.flush  fizz-buzz.flush  fizz_buzz.flush  hello_world.flush
src/: error.rs  flush.rs  main.rs
src/interpreting/: interpreter.rs  mod.rs  typing.rs
src/interpreting/builtins/: cmp.rs  io.rs  math.rs  misc.rs  mod.rs
src/lexer/: lexer.rs  typing.rs
src/lexing/: lexer.rs  mod.rs  typing.rs
src/parsing/: mod.rs  parser.rs  typing.rs
